// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component snapshots should match snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 0.875rem;
  line-height: 1.1428571428571428;
  padding-left: calc(1.5rem - 1px);
  padding-right: calc(1.5rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  border: solid 1px transparent;
  -webkit-transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  cursor: pointer;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  font-family: inherit;
  font-weight: normal;
  color: #ffffff;
  background-color: #146292;
  border-color: #146292;
  border-radius: 0.25rem;
}

.c0:hover {
  box-shadow: 0 2px 4px 0 rgba(49,50,51,0.2);
  -webkit-transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover:disabled {
  box-shadow: none;
}

.c0:hover,
[data-whatintent='keyboard'] .c0:focus {
  background-color: #034a76;
  border-color: #034a76;
}

.c0:disabled,
.c0:hover:disabled,
[data-whatintent='keyboard'] .c0:focus:disabled {
  color: #949ea3;
  background-color: #e4e8ea;
  border-color: #e4e8ea;
}

<Button
  appearance="primary"
  disabled={false}
  renderAs="button"
  size="normal"
>
  <button
    className="c0"
    disabled={false}
  >
    Push Me
  </button>
</Button>
`;

exports[`Button Component snapshots should match snapshot 2`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 0.875rem;
  line-height: 1.1428571428571428;
  padding-left: calc(1.5rem - 1px);
  padding-right: calc(1.5rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  border: solid 1px transparent;
  -webkit-transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  cursor: pointer;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  font-family: inherit;
  font-weight: normal;
  color: #ffffff;
  background-color: #146292;
  border-color: #146292;
  border-radius: 0.25rem;
  padding-left: calc(1.7777777777777777rem - 1px);
  padding-right: calc(1.7777777777777777rem - 1px);
  padding-top: calc(0.8888888888888888rem - 1px);
  padding-bottom: calc(0.8888888888888888rem - 1px);
}

.c0:hover {
  box-shadow: 0 2px 4px 0 rgba(49,50,51,0.2);
  -webkit-transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover:disabled {
  box-shadow: none;
}

.c0:hover,
[data-whatintent='keyboard'] .c0:focus {
  background-color: #034a76;
  border-color: #034a76;
}

.c0:disabled,
.c0:hover:disabled,
[data-whatintent='keyboard'] .c0:focus:disabled {
  color: #949ea3;
  background-color: #e4e8ea;
  border-color: #e4e8ea;
}

<Button
  appearance="primary"
  disabled={false}
  renderAs="button"
  size="large"
>
  <button
    className="c0"
    disabled={false}
  >
    Push Me
  </button>
</Button>
`;

exports[`Button Component snapshots should match snapshot 3`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 0.875rem;
  line-height: 1.1428571428571428;
  padding-left: calc(1.5rem - 1px);
  padding-right: calc(1.5rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  border: solid 1px transparent;
  -webkit-transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  cursor: pointer;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  font-family: inherit;
  font-weight: normal;
  color: #ffffff;
  background-color: #146292;
  border-color: #146292;
  border-radius: 0.25rem;
}

.c0:hover {
  box-shadow: 0 2px 4px 0 rgba(49,50,51,0.2);
  -webkit-transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover:disabled {
  box-shadow: none;
}

.c0:hover,
[data-whatintent='keyboard'] .c0:focus {
  background-color: #034a76;
  border-color: #034a76;
}

.c0:disabled,
.c0:hover:disabled,
[data-whatintent='keyboard'] .c0:focus:disabled {
  color: #949ea3;
  background-color: #e4e8ea;
  border-color: #e4e8ea;
}

<Button
  appearance="primary"
  disabled={true}
  renderAs="button"
  size="normal"
>
  <button
    className="c0"
    disabled={true}
  >
    Don't Push Me
  </button>
</Button>
`;

exports[`Button Component snapshots should match snapshot 4`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 0.875rem;
  line-height: 1.1428571428571428;
  padding-left: calc(1.5rem - 1px);
  padding-right: calc(1.5rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  border: solid 1px transparent;
  -webkit-transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  cursor: pointer;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  font-family: inherit;
  font-weight: normal;
  color: #146292;
  background-color: #ffffff;
  border-color: #146292;
  border-radius: 0.25rem;
}

.c0:hover {
  box-shadow: 0 2px 4px 0 rgba(49,50,51,0.2);
  -webkit-transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover:disabled {
  box-shadow: none;
}

.c0:hover,
[data-whatintent='keyboard'] .c0:focus {
  color: #034a76;
  border-color: #034a76;
}

.c0:disabled,
.c0:hover:disabled,
[data-whatintent='keyboard'] .c0:focus:disabled {
  color: #949ea3;
  background-color: #e4e8ea;
  border-color: #e4e8ea;
}

<Button
  appearance="secondary"
  disabled={false}
  renderAs="button"
  size="normal"
>
  <button
    className="c0"
    disabled={false}
  >
    Push Me
  </button>
</Button>
`;

exports[`Button Component snapshots should match snapshot 5`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 0.875rem;
  line-height: 1.1428571428571428;
  padding-left: calc(1.5rem - 1px);
  padding-right: calc(1.5rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  border: solid 1px transparent;
  -webkit-transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  cursor: pointer;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  font-family: inherit;
  font-weight: normal;
  color: #146292;
  background-color: #ffffff;
  border-color: #146292;
  border-radius: 0.25rem;
}

.c0:hover {
  box-shadow: 0 2px 4px 0 rgba(49,50,51,0.2);
  -webkit-transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover:disabled {
  box-shadow: none;
}

.c0:hover,
[data-whatintent='keyboard'] .c0:focus {
  color: #034a76;
  border-color: #034a76;
}

.c0:disabled,
.c0:hover:disabled,
[data-whatintent='keyboard'] .c0:focus:disabled {
  color: #949ea3;
  background-color: #e4e8ea;
  border-color: #e4e8ea;
}

<Button
  appearance="secondary"
  disabled={true}
  renderAs="button"
  size="normal"
>
  <button
    className="c0"
    disabled={true}
  >
    Don't Push Me
  </button>
</Button>
`;

exports[`Button Component snapshots should match snapshot 6`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 0.875rem;
  line-height: 1.1428571428571428;
  padding-left: calc(1.5rem - 1px);
  padding-right: calc(1.5rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  border: solid 1px transparent;
  -webkit-transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  cursor: pointer;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  font-family: inherit;
  font-weight: normal;
  color: #ffffff;
  background-color: #e05f6e;
  border-color: #e05f6e;
  border-radius: 0.25rem;
}

.c0:hover {
  box-shadow: 0 2px 4px 0 rgba(49,50,51,0.2);
  -webkit-transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover:disabled {
  box-shadow: none;
}

.c0:disabled,
.c0:hover:disabled,
[data-whatintent='keyboard'] .c0:focus:disabled {
  color: #949ea3;
  background-color: #e4e8ea;
  border-color: #e4e8ea;
}

<Button
  appearance="danger"
  disabled={false}
  renderAs="button"
  size="normal"
>
  <button
    className="c0"
    disabled={false}
  >
    Dangerous action
  </button>
</Button>
`;

exports[`Button Component snapshots should match snapshot 7`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 0.875rem;
  line-height: 1.1428571428571428;
  padding-left: calc(1.5rem - 1px);
  padding-right: calc(1.5rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  border: solid 1px transparent;
  -webkit-transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  cursor: pointer;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  font-family: inherit;
  font-weight: normal;
  color: #ffffff;
  background-color: #30c0b8;
  border-color: #30c0b8;
  border-radius: 0.25rem;
}

.c0:hover {
  box-shadow: 0 2px 4px 0 rgba(49,50,51,0.2);
  -webkit-transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover:disabled {
  box-shadow: none;
}

.c0:disabled,
.c0:hover:disabled,
[data-whatintent='keyboard'] .c0:focus:disabled {
  color: #949ea3;
  background-color: #e4e8ea;
  border-color: #e4e8ea;
}

<Button
  appearance="success"
  disabled={false}
  renderAs="button"
  size="normal"
>
  <button
    className="c0"
    disabled={false}
  >
    Push Me
  </button>
</Button>
`;

exports[`Button Component snapshots should match snapshot 8`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 0.875rem;
  line-height: 1.1428571428571428;
  padding-left: calc(1.5rem - 1px);
  padding-right: calc(1.5rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  border: solid 1px transparent;
  -webkit-transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  cursor: pointer;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  font-family: inherit;
  font-weight: normal;
  color: #ffffff;
  background-color: #f5a623;
  border-color: #f5a623;
  border-radius: 0.25rem;
}

.c0:hover {
  box-shadow: 0 2px 4px 0 rgba(49,50,51,0.2);
  -webkit-transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover:disabled {
  box-shadow: none;
}

.c0:disabled,
.c0:hover:disabled,
[data-whatintent='keyboard'] .c0:focus:disabled {
  color: #949ea3;
  background-color: #e4e8ea;
  border-color: #e4e8ea;
}

<Button
  appearance="warning"
  disabled={false}
  renderAs="button"
  size="normal"
>
  <button
    className="c0"
    disabled={false}
  >
    Push Me
  </button>
</Button>
`;

exports[`Button Component snapshots should match snapshot 9`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 0.875rem;
  line-height: 1.1428571428571428;
  padding-left: calc(1.5rem - 1px);
  padding-right: calc(1.5rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  border: solid 1px transparent;
  -webkit-transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  cursor: pointer;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  font-family: inherit;
  font-weight: normal;
  background-color: transparent;
}

.c0:hover {
  box-shadow: 0 2px 4px 0 rgba(49,50,51,0.2);
  -webkit-transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover:disabled {
  box-shadow: none;
}

.c0,
.c0:link,
.c0:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #146292;
  box-shadow: none;
}

[data-whatintent='keyboard'] .c0:focus {
  background-color: #c1c7cb;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:active,
.c0:hover {
  box-shadow: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #034a76;
}

.c0:disabled,
.c0:disabled:link,
.c0:disabled:active,
.c0:disabled:hover,
.c0:disabled:visited,
[data-whatintent='keyboard'] .c0:disabled:focus {
  cursor: not-allowed;
  background: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #c1c7cb;
}

<Button
  appearance="link"
  disabled={false}
  renderAs="button"
  size="normal"
>
  <button
    className="c0"
    disabled={false}
  >
    Push Me
  </button>
</Button>
`;

exports[`Button Component snapshots should match snapshot 10`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 0.875rem;
  line-height: 1.1428571428571428;
  padding-left: calc(1.5rem - 1px);
  padding-right: calc(1.5rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  border: solid 1px transparent;
  -webkit-transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  cursor: pointer;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  font-family: inherit;
  font-weight: normal;
  background-color: transparent;
}

.c0:hover {
  box-shadow: 0 2px 4px 0 rgba(49,50,51,0.2);
  -webkit-transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover:disabled {
  box-shadow: none;
}

.c0,
.c0:link,
.c0:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #146292;
  box-shadow: none;
}

[data-whatintent='keyboard'] .c0:focus {
  background-color: #c1c7cb;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:active,
.c0:hover {
  box-shadow: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #034a76;
}

.c0:disabled,
.c0:disabled:link,
.c0:disabled:active,
.c0:disabled:hover,
.c0:disabled:visited,
[data-whatintent='keyboard'] .c0:disabled:focus {
  cursor: not-allowed;
  background: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #c1c7cb;
}

<Button
  appearance="link"
  disabled={true}
  renderAs="button"
  size="normal"
>
  <button
    className="c0"
    disabled={true}
  >
    Don't Push Me
  </button>
</Button>
`;

exports[`Button Component snapshots should match snapshot 11`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 0.875rem;
  line-height: 1.1428571428571428;
  padding-left: calc(1.5rem - 1px);
  padding-right: calc(1.5rem - 1px);
  padding-top: calc(0.625rem - 1px);
  padding-bottom: calc(0.625rem - 1px);
  border: solid 1px transparent;
  -webkit-transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  cursor: pointer;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  font-family: inherit;
  font-weight: normal;
  color: #ffffff;
  background-color: #146292;
  border-color: #146292;
  border-radius: 0.25rem;
}

.c0:hover {
  box-shadow: 0 2px 4px 0 rgba(49,50,51,0.2);
  -webkit-transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
  transition: border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover:disabled {
  box-shadow: none;
}

.c0:hover,
[data-whatintent='keyboard'] .c0:focus {
  background-color: #034a76;
  border-color: #034a76;
}

.c0:disabled,
.c0:hover:disabled,
[data-whatintent='keyboard'] .c0:focus:disabled {
  color: #949ea3;
  background-color: #e4e8ea;
  border-color: #e4e8ea;
}

<Button
  appearance="primary"
  disabled={false}
  renderAs="span"
  size="normal"
>
  <span
    className="c0"
    disabled={false}
  >
    I'm not a button
  </span>
</Button>
`;
